AC_PREREQ(2.52)

AC_INIT(gipsec, 0.1, libin.charles@gmail.com, gipsec)
AM_INIT_AUTOMAKE([])
AM_MAINTAINER_MODE

AC_CONFIG_HEADERS(config.h)

dnl Required programs
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_LIBTOOL

dnl
dnl translation support
dnl
GETTEXT_PACKAGE=gipsec
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package])
IT_PROG_INTLTOOL([0.35.0])
AM_GLIB_GNU_GETTEXT

PKG_CHECK_MODULES(GOBJECT, gobject-2.0)

PKG_CHECK_MODULES(GIPSEC, [glib-2.0 >= 2.10 gtk+-2.0 >= 2.10])

GLIB_GENMARSHAL=`pkg-config --variable=glib_genmarshal glib-2.0`
AC_SUBST(GLIB_GENMARSHAL)

AC_CONFIG_FILES([
Makefile
src/Makefile
])
AC_OUTPUT
